# Sketchable-Interaction

./: .gitignore  CMakeLists.txt  Makefile  README.md
SI/: CMakeLists.txt  StartSIGRun.py  auto_clicker.py  clicker.py  libs  si
SI-IdeasTesting/engine_approach_desktop/engine_scripting/: CMakeLists.txt
SI-IdeasTesting/engine_approach_desktop/engine_scripting/plugins/: pyregion.py
SI-IdeasTesting/engine_approach_desktop/engine_scripting/src/: main.cpp
SI-IdeasTesting/opengl_based_rendering/c_ogl_si_test/: CMakeLists.txt
SI-IdeasTesting/opengl_based_rendering/c_ogl_si_test/shader/: color_shading.frag  color_shading.vert
SI-IdeasTesting/opengl_based_rendering/c_ogl_si_test/src/: engine.c  engine.h  main.c  rect.c  rect.h  shader.c  shader.h  vertex.h
SI/docs/api_examples/: api_examples.md
SI/docs/doxyfiles/: Doxyfile  Doxyfile.in  DoxyfilePySI  DoxyfilePySI.in  DoxyfileSIGRun  DoxyfileSIGRun.in
SI/examples/app/: CMakeLists.txt
SI/examples/app/src/: main.cpp
SI/include/SI/: SI.hpp
SI/plugins/: StartSIGRun.py  pyregion.py
SI/plugins/standard_environment_library/: Canvas.py  Cursor.py  SIEffect.py  Tag.py
SI/plugins/standard_environment_library/button/: Button.py  Button.qml  ScaleButton.py
SI/plugins/standard_environment_library/canvas/: Canvas.py
SI/plugins/standard_environment_library/cursor/: Cursor.py  Cursor.qml
SI/plugins/standard_environment_library/deletion/: Deletion.py  Deletion.qml
SI/plugins/standard_environment_library/dir/: Directory.py  Directory.qml
SI/plugins/standard_environment_library/directory_folder/: Directory.py  Directory.qml
SI/plugins/standard_environment_library/external_application/: Container.py
SI/plugins/standard_environment_library/filesystem/: Directory.py  Directory.qml  Entry.py  File.py  ImageFile.py  ImageFile.qml  OpenDirectory.py  OpenDirectory.qml  OpenEntry.py  OpenEntry.qml  OpenFile.py  OpenFilesystemEntry.py  TextFile.py  TextFile.qml  __OpenEntryHelper.py
SI/plugins/standard_environment_library/notification/: SimpleNotification.py  SimpleNotification.qml
SI/plugins/standard_environment_library/palette/: Palette.py  Selector.py  Selector.qml
SI/plugins/standard_environment_library/preview/: Preview.py  Preview.qml
SI/plugins/standard_environment_library/tag/: Tag.py  Tag.qml
SI/src/: CMakeLists.txt  SI.cpp  SI.hpp  SIEngine.cpp  SIEngine.hpp  SIGRun.cpp  SIGRun.hpp  SIRuntime.cpp  SIRuntime.hpp
SI/src/_sirose/: Publisher.hpp  SIROS2Environment.cpp  SIROS2Environment.hpp
SI/src/context/: Context.cpp  Context.hpp  Layer.cpp  Layer.hpp  LayerManager.cpp  LayerManager.hpp
SI/src/context/managers/: LayerManager.cpp  LayerManager.hpp  PersistenceManager.cpp  PersistenceManager.hpp  PluginManager.hpp  RegionManager.cpp  RegionManager.hpp  RegionPluginManager.cpp  RegionPluginManager.hpp
SI/src/core/: CMakeLists.txt  Core.cpp  Core.hpp
SI/src/core/benchmark/: BenchmarkTimer.cpp  BenchmarkTimer.hpp
SI/src/core/collision/: CollisionManager.cpp  CollisionMask.cpp  CollisionMask.hpp
SI/src/core/concurrency/: StoppableTask.cpp  StoppableTask.hpp
SI/src/core/context/: Context.cpp  Context.hpp
SI/src/core/debug/: Print.hpp
SI/src/core/math/: si_math.hpp
SI/src/core/pysi_core/: Plugin.cpp  Plugin.hpp  PluginCollector.cpp  PluginCollector.hpp  Scripting.cpp  Scripting.hpp
SI/src/core/region/: Region.cpp  Region.hpp
SI/src/core/render_engine_core/: IRenderEngine.hpp
SI/src/debug/: Print.cpp  Print.hpp
SI/src/e/: CMakeLists.txt  E.cpp  E.hpp
SI/src/error/: Error.hpp
SI/src/pysi/: PySI.cpp  PySIEffect.cpp  PySIEffect.hpp  PySIStartup.cpp  PySIStartup.hpp  SuperEffect.cpp  SuperEffect.hpp
SI/src/pysi/pickling/: PickleSuits.hpp
SI/src/pysi/stl_container_exposure/: MapExposure.hpp  MapItem.hpp  ObjectHolder.hpp  VectorExposure.hpp  VectorItem.hpp
SI/src/python3_plugin/: Plugin.cpp  PluginCollector.hpp
SI/src/render_engine/: CMakeLists.txt
SI/src/render_engine/debug/: SiRenPrint.cpp  SiRenPrint.hpp
SI/src/render_engine/sdl2/: SIRenderEngineSDL2.cpp  SIRenderEngineSDL2.hpp
SI/src/resource/: Plugin.hpp  PluginCollector.cpp
SI/src/sigrun/: Core.cpp  Core.hpp  MetaType.hpp  SIConstants.hpp  SIMessages.hpp  SIObject.hpp  SITypes.hpp  StartSIGRun.py
SI/src/sipluggen/: sipluggen.cpp  templates.h
SI/src/siren/: CMakeLists.txt  RenderEngineQt5.cpp  RenderEngineQt5.hpp  RenderEngineSdl2.cpp  RenderEngineSdl2.hpp
SI/src/sirose/: CMakeLists.txt  Publisher.cpp  SIROS2Environment.cpp  SIROS2Environment.hpp  Subscriber.cpp  Subscriber.hpp
SI/src/sitools/: CMakeLists.txt  sitools.cpp  sitools.hpp
SI/test/src/: SI_test.cpp  SI_test.hpp
SI/tests/: CMakeLists.txt
SI/tests/res/: test.py
SI/tests/src/: SIEngineTest.cpp  SIGRunCoreTest.cpp  SIGRunCoreTest.hpp  SIGRunPrintTest.cpp  SIGRunTest.cpp  SIGRunTest.hpp  SIRuntimeTest.cpp  SIRuntime_test.cpp  SiCollisionMaskTest.cpp  SiLayerManagerTest.cpp  SiMathTest.cpp  SiPluginCollectorTest.cpp  SiPluginManagerTest.cpp  SiPluginTest.cpp  SiPrintTest.cpp  SiRegionManagerTest.cpp  SiScriptingTest.cpp  run_unit_tests.cpp  unit_test_run.cpp
si_engine/core/: CMakeLists.txt  si.cpp  si.h
si_engine/core/include/: canvas_region.h  engine.h  mouse_region.h  region.h  si.h  signal_handler.h  step.h  util.h
si_engine/core/si_debug/: debug.cpp  debug.h
si_engine/core/si_engine/: engine.cpp  engine.h  signal_handler.cpp  signal_handler.h  step.cpp  step.h  timing.h
si_engine/core/si_interaction/: effect.cpp  effect.h  mask.cpp  mask.h  region.cpp  region.h
si_engine/core/si_plugin/: plugin.cpp  plugin.h
si_engine/core/si_region/: region.cpp  region.h  region_template.cpp  region_template.h
si_engine/core/si_stdlib/: canvas.cpp  canvas.h  canvas_region.cpp  canvas_region.h  mouse_region.cpp  mouse_region.h  neutral.cpp  neutral.h
si_engine/core/si_test/: main.cpp
si_engine/core/si_util/: util.h
si_engine/core/src/: canvas_region.cpp  engine.cpp  main.cpp  mask.cpp  mouse_region.cpp  region.cpp  si.cpp  signal_handler.cpp  step.cpp
silang-compiler/c/: CMakeLists.txt  ast.h  error.c  lexer.l  main.c  parser.y  test.si
(+1855 files in other folders)
